feat: Creates product_details template with style. Associated views and url updated.

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@
           <div class="my-4">
             <h4>
               <a
-                href=""
+                href="{% url 'products' %}"
                 class="btn-style btn mb-3"
                 aria-label="Go to the home page"
                 >Discover</a
