--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -32,10 +32,14 @@
     </div>
     <div class="col-12 col-md-6 col-lg-4">
       <div class="product-details-container mb-5 mt-md-5">
-        <p class="mb-0">{{ product.name }}</p>
-        <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
+        <h3 class="mb-0 text-uppercase product-name">
+          {{ product.brand }} <span class="text-secondary fw-bolder">|</span>
+          <!-- prettier-ignore -->
+          {{ product.name }}
+        </h3>
+        <h4 class="my-2 text-left fw-semi-bold">€{{ product.price }}</h4>
         {% if product.category %}
-        <p class="small mt-1 mb-0">
+        <p class="small mt-2 mb-0">
           <a
             href="{% url 'products' %}?category={{ product.category.name | urlencode }}"
             aria-label="Go to the products category page"
@@ -47,7 +51,7 @@
           </a>
         </p>
         {% endif %} {% if product.gender_category %}
-        <p class="small mt-1 mb-0">
+        <p class="small mt-2 mb-0">
           <a
             href="{% url 'products' %}?gender_category={{ product.gender_category| urlencode  }}"
             aria-label="Go to the gender category page"
@@ -58,6 +62,7 @@
             {{ product.gender_category }}
           </a>
         </p>
+        {% endif %}
         <div class="mb-3">
           <a href="#reviews-section" class="text-decoration-none">
             <div class="book-rating d-inline">
@@ -68,10 +73,10 @@
           <p class="me-3 small d-inline">({{ product.review_count}})</p>
           {% endif %}
         </div>
-        <div class="mt-3">{{ product.description | safe }}</div>
+        <div class="mt-3 fw-light">{{ product.description | safe }}</div>
         <form class="form" action="" method="POST">
           {% csrf_token %}
-          <div class="form-row">
+          <div class="form-row py-3">
             {% with product.has_sizes as s %} {% if s %}
             <div class="col-12">
               <p><strong>Size:</strong></p>
@@ -94,7 +99,7 @@
                 <div class="input-group">
                   <div class="input-group-prepend">
                     <button
-                      class="decrement-qty btn btn-black rounded-1"
+                      class="decrement-qty btn btn-style rounded-start"
                       data-item_id="{{ product.id }}"
                       id="decrement-qty_{{ product.id }}"
                       aria-label="Decrement"
@@ -117,7 +122,7 @@
                   />
                   <div class="input-group-append">
                     <button
-                      class="increment-qty btn btn-black rounded-0"
+                      class="increment-qty btn btn-style rounded-end"
                       data-item_id="{{ product.id }}"
                       id="increment-qty_{{ product.id }}"
                       aria-label="Increment"
@@ -134,20 +139,20 @@
               <a
                 href="{% url 'products' %}"
                 aria-label="Go to the products page"
-                class="btn btn-outline-black rounded-0 mt-5 w-100"
+                class="btn btn-secundary rounded-1 mt-5 w-100 text-uppercase fw-light"
               >
-                <span class="icon">
-                  <i class="fas fa-chevron-left prussian-blue"></i>
+                <span class="icon pacific-blue">
+                  <i class="fas fa-chevron-left"></i>
                 </span>
-                <span class="btn-secundary d-inline">Keep Shopping</span>
+                <span class="">Keep Shopping</span>
               </a>
               <button
                 type="submit"
-                class="btn btn-products btn-black rounded-1 mt-5 w-100"
+                class="btn btn-style text-uppercase fw-light rounded-1 mt-5 w-100"
                 value="Add to Bag"
                 aria-label="Add to Bag"
               >
-                <i class="fas fa-lock prussian-blue me-2"></i> Add to Bag
+                <i class="fas fa-lock me-2 pacific-blue"></i> Add to Bag
               </button>
             </div>
             <input
@@ -190,7 +195,6 @@
 <!-- END OF PRODUCT DETAILS SECTION -->
 
 <!-- PRODUCTS FEATURED CAROUSEL -->
-{% include "includes/products_sales.html" %}
 <!-- END PRODUCTS FEATURED CAROUSEL -->
 {% endblock %} {% block postloadjs %} {{ block.super }}
 <!-- QUANTITY INPUT SCRIPT -->
