--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -71,7 +71,7 @@
             </a>
             {% else %}
             <a
-              href="{% url 'product_detail' product.id %}"
+              href="{% url 'product_details' product.id %}"
               aria-label="Go to the {{ product.name }} details page"
             >
               <img
@@ -124,7 +124,7 @@
                   {% endif %}
                   <div>
                     <a
-                      href="{% url 'product_detail' product.id %}"
+                      href="{% url 'product_details' product.id %}"
                       aria-label="Go to the {{ product.name }} details page"
                       class="btn btn-secundary rounded-1 mt-2"
                       >Add to bag</a
