--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         </div>
         <!-- Search form  -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-          <form action="" method="get">
+          <form action="{% url 'products' %}" method="get">
             <div class="input-group w-100">
               <input
                 class="form-control border border-black rounded-0"
