--- a/products/templates/products/includes/product_type.html
+++ b/products/templates/products/includes/product_type.html
@@ -39,7 +39,7 @@
       >
     </a>
     {% endfor %}
-    <hr class="w-50 mb-1 prussian-blue" />
+    <hr class="w-50 mx-auto mb-1 prussian-blue" />
   </div>
 </div>
 {% endblock content %}
