feat: allows users to access the bag page from navbar.

--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
             <!-- Bag link -->
             <li class="list-inline-item">
               <a
-                href=""
+                href="{% url 'view_bag' %}"
                 aria-label="Go to the view bag page"
                 class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
               >
