--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% load static %}
+{% extends "base.html" %} {% load static %} {% block extra_title %} | Shopping
+Bag{% endblock %}
 
 <!-- prettier-ignore -->
 {% block page_header %}
@@ -7,7 +8,142 @@
 </div>
 {% endblock %}
 
-<!-- prettier-ignore -->
+<!-- BAG SECTION -->
 {% block content %}
+<div class="overlay"></div>
+<div class="container">
+  <div class="row">
+    <div class="col text-center">
+      <hr />
+      <h2 class="mb-5 mt-5">Shopping Bag</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      {% if shopping_bag_items %}
+      <div class="d-block d-md-none">
+        <!-- Back to top btn -->
+
+        <!-- Bag Total -->
+        <div class="row">
+          <div class="col mb-2">{% include 'bag/includes/bag_total.html'%}</div>
+        </div>
+        <!-- Checkout Btns -->
+        <div class="row">
+          <div class="col">
+            {% include 'bag/includes/checkout_btns.html'%}
+            <p class="text-muted mb-5 mt-2">
+              A summary of your bag contents is below
+            </p>
+          </div>
+        </div>
+        {% for item in bag_items %}
+        <div class="row">
+          <div class="col-12 col-sm-6 mb-2">
+            {% include 'bag/includes/product_image.html'%}
+          </div>
+          <div class="col-12 col-sm-6 mb-2">
+            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+          </div>
+          <div class="col-12 col-sm-6">
+            <p class="my-0"><strong>€{{ item.product.price }}</strong></p>
+          </div>
+          <div class="col-12 col-sm-6">
+            {% include 'bag/includes/quantity-form.html'%}
+            <p class="btn update-link text-info"><small>Update</small></p>
+            <p
+              class="btn remove-item text-danger text-left me-1"
+              id="remove_{{ item.item_id }}"
+            >
+              <small>Delete</small>
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <hr />
+          </div>
+        </div>
+        {% endfor %}
+        <div>
+          <button onclick="topFunction()" id="ShoppingBagBtn" title="Go to top">
+            Top
+          </button>
+        </div>
+      </div>
+      <div class="table-responsive rounded mb-5 d-none d-md-block">
+        <table class="table table-sm table-borderless">
+          <thead class="text-black">
+            <tr>
+              <th scope="col">Item Info</th>
+              <th scope="col"></th>
+              <th scope="col">Price</th>
+              <th scope="col">Qty</th>
+              <th scope="col">Subotal</th>
+            </tr>
+          </thead>
+          {% for item in bag_items %}
+          <tbody class="border-top">
+            <tr>
+              <!-- Product Image -->
+              <td class="p-3">
+                <a href="{% url 'product_details' item.product.id %}">
+                  {% include 'bag/includes/product_image.html'%}
+                </a>
+              </td>
+
+              <!-- Product Info -->
+              <td class="py-3">
+                <p class="my-0"><strong>{{ item.product.title }}</strong></p>
+              </td>
+
+              <!-- Product Price -->
+              <td class="py-3">
+                <p class="my-0">€{{ item.product.price }}</p>
+              </td>
+
+              <!-- Quantity Form -->
+              <td class="py-3 w-25">
+                {% include 'bag/includes/quantity_form.html'%}
+
+                <p class="btn update-link text-info"><small>Update</small></p>
+                <p
+                  class="btn delete-item text-danger text-left ms-1"
+                  id="delete_{{ item.item_id }}"
+                >
+                  <small>Delete</small>
+                </p>
+              </td>
+
+              <td class="py-3">
+                <p class="my-0">
+                  €{{ item.product.price | calc_subtotal:item.quantity }}
+                </p>
+              </td>
+            </tr>
+          </tbody>
+          {% endfor %}
+        </table>
+        <div>
+          <!-- Bag total -->
+          {% include 'bag/includes/bag_total.html'%}
+        </div>
+        <div>
+          <!-- Checkout Btns -->
+          {% include 'bag/includes/checkout_btns.html'%}
+        </div>
+      </div>
+      {% else %}
+      <p class="lead my-5 text-center">Your bag is empty.</p>
+      <a href="{% url 'products' %}">
+        <button class="btn-style my-5 p-2">
+          <i class="fas fa-arrow-left"></i> Keep Shopping
+        </button>
+      </a>
+      {% endif %}
+    </div>
+  </div>
+</div>
+<!-- END BAG SECTION -->
 
 {% endblock %}
