fix: Fixes the quantity buttons on the product details and bag page to allow users to update qua (quantity_input_script)

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -96,7 +96,7 @@
 
               <!-- Product Info -->
               <td class="py-3">
-                <p class="my-0"><strong>{{ item.product.title }}</strong></p>
+                <p class="my-0"><strong>{{ item.product.name }}</strong></p>
               </td>
 
               <!-- Product Price -->
@@ -147,4 +147,9 @@
   </div>
 </div>
 <!-- END BAG SECTION -->
-{% include 'products/includes/script.html' %} {% endblock %}
+{% endblock %} {% block postloadjs %} {{ block.super }}
+<!-- JAVASCRIPT -->
+<!-- prettier-ignore -->
+{% include 'products/includes/quantity_input_script.html' %}
+<!-- END JAVASCRIPT -->
+{% endblock %}
