--- a/products/templates/products/includes/product_rating.html
+++ b/products/templates/products/includes/product_rating.html
@@ -1,16 +1,16 @@
-{% if book.rating > 4.5 %}
+{% if product.rating > 4.5 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
-{% elif book.rating > 4 %}
+{% elif product.rating > 4 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-star-half-o"></i>
-{% elif book.rating > 3.5 %}
+{% elif product.rating > 3.5 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
@@ -22,31 +22,31 @@
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-star-half-o"></i>
 <i class="fa fa-regular fa-star"></i>
-{% elif book.rating > 2.5 %}
+{% elif product.rating > 2.5 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
-{% elif book.rating > 2 %}
+{% elif product.rating > 2 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-star-half-o"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
-{% elif book.rating > 1.5 %}
+{% elif product.rating > 1.5 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
-{% elif book.rating > 1 %}
+{% elif product.rating > 1 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-star-half-o"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
-{% elif book.rating > 0.5 %}
+{% elif product.rating > 0.5 %}
 <i class="fa fa-solid fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
 <i class="fa fa-regular fa-star"></i>
