feat: Fixes bag script to allow user to update qty from bag. Fix: disable at negative qty.

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -151,5 +151,7 @@
 <!-- JAVASCRIPT -->
 <!-- prettier-ignore -->
 {% include 'products/includes/quantity_input_script.html' %}
+{% include 'bag/includes/bag_script.html' %}
+
 <!-- END JAVASCRIPT -->
 {% endblock %}
