--- a/bag/templates/bag/includes/quantity_form.html
+++ b/bag/templates/bag/includes/quantity_form.html
@@ -4,27 +4,33 @@
   action="{% url 'adjust_bag' item.item_id %}"
 >
   {% csrf_token %}
-  <div class="qty-btns input-group-prepend w-50">
-    <button
-      class=" btn-sm btn-style rounded-0 border-0 minus-qty minus-qty-{{ item.item_id }}"
-      data-item_id="{{ item.item_id }}"
-    >
-      <i class="fas fa-minus fa-sm"></i>
-    </button>
-    <input
-      class="form-control form-control-sm qty-input text-center p-0 id_qty_{{ item.item_id }}"
-      type="number"
-      name="quantity"
-      value="{{ item.quantity }}"
-      min="1"
-      max="99"
-      data-item_id="{{ item.item_id }}"
-    />
-    <button
-      class="btn-sm rounded-0 border-0 plus-qty plus-qty-{{ item.item_id }}"
-      data-item_id="{{ item.item_id }}"
-    >
-      <i class="fas fa-plus fa-sm"></i>
-    </button>
+  <div class="form-group">
+    <div class="input-group w-50 input-group-{{ item.item_id }}">
+      <div class="input-group-prepend">
+        <button
+          class="btn-sm btn-style rounded-1 border-0 decrement-qty decrement-qty_{{ item.item_id }}"
+          data-item_id="{{ item.item_id }}"
+        >
+          <i class="fas fa-minus fa-sm"></i>
+        </button>
+      </div>
+      <input
+        class="form-control form-control-sm qty_input text-center p-0 id_qty_{{ item.item_id }}"
+        type="number"
+        name="quantity"
+        value="{{ item.quantity }}"
+        min="1"
+        max="99"
+        data-item_id="{{ item.item_id }}"
+      />
+      <div class="input-group-append">
+        <button
+          class="btn-sm rounded-1 border-0 increment-qty increment-qty_{{ item.item_id }}"
+          data-item_id="{{ item.item_id }}"
+        >
+          <i class="fas fa-plus fa-sm"></i>
+        </button>
+      </div>
+    </div>
   </div>
 </form>
