feat: allows users to update quantity & remove items from their bag. ⚠️ Qty can go in negative.

--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -20,7 +20,7 @@
     handleEnableDisable(itemId);
   }
 
-  // Check enable/disable every time the input is changed
+  // Checks enable/disable every time the input is changed
   $(".qty_input").change(function () {
     let itemId = $(this).data("item_id");
     handleEnableDisable(itemId);
