--- a/bag/templates/bag/includes/quantity_form.html
+++ b/bag/templates/bag/includes/quantity_form.html
@@ -1,3 +1,4 @@
+<!-- QUANTITY FORM -->
 <form
   class="form update-form pb-3"
   method="POST"
@@ -8,29 +9,51 @@
     <div class="input-group w-50 input-group-{{ item.item_id }}">
       <div class="input-group-prepend">
         <button
-          class="btn-sm btn-style rounded-1 border-0 decrement-qty decrement-qty_{{ item.item_id }}"
+          class="btn-sm btn-style rounded-1 border-0 decrement-qty decrement-qty_{{ item.item_id }} 
+          {% if item.size %}decrement-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
           data-item_id="{{ item.item_id }}"
+          data-size="{{ item.size }}"
+          aria-label="Decrement"
         >
           <i class="fas fa-minus fa-sm"></i>
         </button>
       </div>
       <input
-        class="form-control form-control-sm qty_input text-center p-0 id_qty_{{ item.item_id }}"
+        class="form-control form-control-sm qty_input text-center p-0 id_qty_{{ item.item_id }}
+        {% if item.size %}size_{{ item.item_id }}_{{ item.size }}{% endif %}"
         type="number"
         name="quantity"
         value="{{ item.quantity }}"
         min="1"
         max="99"
         data-item_id="{{ item.item_id }}"
+        id="id_qty_{{ item.item_id }}"
+        data-size="{{ item.size }}"
       />
       <div class="input-group-append">
         <button
-          class="btn-sm rounded-1 border-0 increment-qty increment-qty_{{ item.item_id }}"
+          class="btn-sm btn-style rounded-1 border-0 increment-qty increment-qty_{{ item.item_id }}
+          {% if item.size %}increment-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
           data-item_id="{{ item.item_id }}"
+          id="increment-qty_${itemId}"
+          data-size="{{ item.size }}"
+          aria-label="Increment"
         >
           <i class="fas fa-plus fa-sm"></i>
         </button>
       </div>
+      {% if item.product.has_sizes %}
+      <input type="hidden" name="product_size" value="{{ item.size }}" />
+      {% endif %}
     </div>
   </div>
 </form>
+<p class="btn update-link text-info"><small>Update</small></p>
+<p
+  class="btn remove-item text-danger text-left me-1"
+  id="remove_{{ item.item_id }}"
+  data-product_size="{{ item.size }}"
+>
+  <small>Remove</small>
+</p>
+<!-- END QUANTITY FORM -->
