fix: aligns checkout buttons and total on bag template to the right.

--- a/bag/templates/bag/includes/bag_total.html
+++ b/bag/templates/bag/includes/bag_total.html
@@ -1,4 +1,4 @@
-<div class="pt-5 text-right">
+<div class="pt-5 text-end">
   <h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
   <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
   <h4 class="mt-4">
