--- a/bag/templates/bag/includes/checkout_btns.html
+++ b/bag/templates/bag/includes/checkout_btns.html
@@ -1,22 +1,24 @@
 <!-- CHECKOUT BUTTONS -->
-<a
-  href="{% url 'products' %}"
-  aria-label="Go to the products page"
-  class="btn btn-outline-secondary rounded-1 btn-lg mb-2"
->
-  <span class="icon">
-    <i class="fas fa-chevron-left interactive-color"></i>
-  </span>
-  <span class="text-uppercase">Keep Shopping</span>
-</a>
-<a
-  href=""
-  aria-label="Go to the checkout page"
-  class="btn btn-style rounded-1 btn-lg mb-2"
->
-  <span class="text-uppercase">Secure Checkout</span>
-  <span class="icon">
-    <i class="fas fa-credit-card ms-2"></i>
-  </span>
-</a>
+<div class="text-end">
+  <a
+    href="{% url 'products' %}"
+    aria-label="Go to the products page"
+    class="btn btn-outline-secondary rounded-1 btn-lg mb-2"
+  >
+    <span class="icon">
+      <i class="fas fa-chevron-left interactive-color"></i>
+    </span>
+    <span class="text-uppercase">Keep Shopping</span>
+  </a>
+  <a
+    href=""
+    aria-label="Go to the checkout page"
+    class="btn btn-style rounded-1 btn-lg mb-2"
+  >
+    <span class="text-uppercase">Secure Checkout</span>
+    <span class="icon">
+      <i class="fas fa-credit-card ms-2"></i>
+    </span>
+  </a>
+</div>
 <!-- END CHECKOUT BUTTONS -->
