--- a/bag/templates/bag/includes/quantity_form.html
+++ b/bag/templates/bag/includes/quantity_form.html
@@ -14,6 +14,7 @@
           data-item_id="{{ item.item_id }}"
           data-size="{{ item.size }}"
           aria-label="Decrement"
+          id="decrement-qty_{{ item.item_id }}"
         >
           <i class="fas fa-minus fa-sm"></i>
         </button>
@@ -35,7 +36,7 @@
           class="btn-sm btn-style rounded-1 border-0 increment-qty increment-qty_{{ item.item_id }}
           {% if item.size %}increment-size_{{ item.item_id }}_{{ item.size }}{% endif %}"
           data-item_id="{{ item.item_id }}"
-          id="increment-qty_${itemId}"
+          id="increment-qty_{{ item.item_id }}"
           data-size="{{ item.size }}"
           aria-label="Increment"
         >
