--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -12,11 +12,11 @@
     <strong class="me-auto">Success!</strong>
     <button
       type="button"
-      class="ms-2 mb-1 close text-dark"
-      data-dismiss="toast"
+      class="ms-2 mb-1 btn-close text-dark"
+      data-bs-dismiss="toast"
       aria-label="Close"
     >
-      <span aria-hidden="true">&times;</span>
+      <span aria-hidden="true"></span>
     </button>
   </div>
   <div class="toast-body bg-white">
