--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -9,6 +9,7 @@
 <!-- END OF BLOCK PAGE HEADER -->
 {% endblock %} {% block content %}
 <!-- PRODUCT DETAILS SECTION -->
+<div class="overlay"></div>
 <div class="container-fluid mt-3">
   <div class="row">
     <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
