feat: Adds link from checkout buttons in bag to redirect to checkout page.

--- a/bag/templates/bag/includes/checkout_btns.html
+++ b/bag/templates/bag/includes/checkout_btns.html
@@ -11,7 +11,7 @@
     <span class="text-uppercase">Keep Shopping</span>
   </a>
   <a
-    href=""
+    href="{% url 'checkout' %}"
     aria-label="Go to the checkout page"
     class="btn btn-style rounded-1 btn-lg mb-2"
   >
