--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -210,4 +210,10 @@
   </h1>
 </div>
 <!-- END CHECKOUT SECTION -->
-{% endblock %} {% block postloadjs %} {{ block.super }} {% endblock %}
+{% endblock %}
+<!-- prettier-ignore -->
+{% block postloadjs %} 
+  {{ block.super }} 
+  {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+  {{ client_secret|json_script:"id_client_secret" }}
+{% endblock %}
