--- a/templates/base.html
+++ b/templates/base.html
@@ -184,37 +184,7 @@
 
     <!-- Postload JavaScript -->
     {% block postloadjs %}
-    <!-- JS to display the toast messages -->
-    <script type="text/javascript">
-      // Display toast messages
-      window.onload = (event)=> {
-            let messageAlert = document.querySelector('.toast');
-            let beAlert = new bootstrap.Toast(messageAlert);
-            beAlert.show();
-        }
-
-      // Back to top btn
-      let mybutton = document.getElementById("myBtn");
-
-      // When the user scrolls down 20px from the top of the document, show the button
-      window.onscroll = function () {
-          scrollFunction();
-      };
-
-      function scrollFunction() {
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-              mybutton.style.display = "block";
-          } else {
-              mybutton.style.display = "none";
-          }
-      }
-
-      // When the user clicks on the button, scroll to the top of the document
-      function topFunction() {
-          document.body.scrollTop = 0; // For Safari
-          document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-      }
-    </script>
+    {% include 'includes/base_script.html' %}
     {% endblock %}
   </body>
 </html>
