--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -124,7 +124,7 @@
               >Save this delivery information to my profile</label
             >
             <input
-              class="form-check-input ml-2 mr-0"
+              class="form-check-input ms-2 me-0"
               type="checkbox"
               id="id-save-info"
               name="save-info"
