--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -69,12 +69,12 @@
           </p>
         </strong>
         {% if free_delivery_delta > 0 %}
-        <p class="mb-0 p-2 bg-warning shadow-sm text-black text-center">
+        <p class="mb-0 p-2 text-bg-warning shadow-sm text-black text-center">
           Spend <strong>€{{ free_delivery_delta }}</strong> more to get free
           next day delivery!
         </p>
         {% else %}
-        <p class="mb-0 p-2 bg-success shadow-sm text-black text-center">
+        <p class="mb-0 p-2 text-bg-success shadow-sm text-black text-center">
           <strong>You got free delivery!</strong>
         </p>
         {% endif %}
@@ -82,7 +82,7 @@
           <a
             href="{% url 'view_bag' %}"
             aria-label="Go to the add view bag page"
-            class="btn btn-dark btn-block rounded-1"
+            class="btn btn-dark btn-block rounded-bottom"
           >
             <span class="text-uppercase">Go To Secure Checkout</span>
             <span class="icon">
