fix: background color for toast message with bootstrap 5.2 update.

--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -7,7 +7,7 @@
   role="alert"
 >
   <div class="arrow-up arrow-danger"></div>
-  <div class="w-100 toast-capper bg-danger"></div>
+  <div class="w-100 toast-capper text-bg-danger"></div>
   <div class="toast-header bg-white text-dark">
     <strong class="me-auto">Error!</strong>
     <button
