--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -104,7 +104,7 @@
             <p class="mb-0 text-black font-weight-bold">Address 2</p>
           </div>
           <div class="col-12 col-md-8 text-md-right">
-            <p class="mb-0">{{ order.street_address1 }}</p>
+            <p class="mb-0">{{ order.street_address2 }}</p>
           </div>
         </div>
         {% endif %} {% if order.county %}
@@ -205,7 +205,7 @@
         class="btn btn-style rounded-1 my-2"
       >
         <span class="icon me-2">
-          <i class="fas fa-gifts interactive-color"></i>
+          <i class="fas fa-gifts pacific-blue"></i>
         </span>
         <span class="text-uppercase">Now check out other Products!</span>
       </a>
